--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'org.springframework.boot' version '2.0.3.RELEASE'
     id 'java'
 }
 
@@ -16,4 +16,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
+
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.0.0')
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.0.0')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.0')
 }
